Style footer, fix spacing with font awesome & recipe btn

--- a/style.css
+++ b/style.css
@@ -1,7 +1,17 @@
-* {
+xp* {
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
 }
+
+
+/*** Elements ***/
+
+a {
+    text-decoration: none;
+}
+
+
+/*** End Elements ***/
 
 
 /*** Video  ***/
@@ -112,12 +122,21 @@ a:visited .fa-twitter-square {
     margin-top: .5em;
 }
 
-.fa-arrow-down:hover {
+.fa-arrow-down:hover,
+.fa-github-alt:hover,
+.fa-linkedin-square:hover,
+.fa-twitter:hover {
     text-shadow: -1px 1px 8px #ffde79;
 }
 
 .fa-twitter-square:hover {
     text-shadow: 0px 0px 5px #9fffe7;
+}
+
+.fa-cutlery,
+.fa-github-alt {
+    display: inline-block;
+    margin: 0 .8em;
 }
 
 
@@ -131,6 +150,7 @@ a:visited .fa-twitter-square {
     display: flex;
     flex-direction: column;
     margin-top: 2em;
+    z-index: 900;
 }
 
 .buttonQuote {
@@ -161,11 +181,14 @@ a:visited .fa-twitter-square {
 }
 
 
-/** Full Recipe **/
+/*** End Taco Generator***/
+
+
+/*** Full Recipe ***/
 
 #recipeButton {
     display: block;
-    margin: auto;
+    margin: 0 auto 1em;
     height: 8em;
 }
 
@@ -178,3 +201,32 @@ a:visited .fa-twitter-square {
 p#tacoP {
     margin: 1.8em 0;
 }
+
+
+/*** End Full Recipe ***/
+
+
+/*** Footer ***/
+
+.footerWrapper {
+    margin-top: 3em;
+}
+
+footer {
+    text-align: center;
+    width: 100%;
+    height: 3em;
+    background: #4a2916;
+    border-top: 2px solid #c68775;
+    position: fixed;
+    left: 0px;
+    bottom: 0px
+}
+
+footer p,
+footer p a {
+    color: #ffc000;
+}
+
+
+/*** End Footer ***/
